--- a/download.html
+++ b/download.html
@@ -125,7 +125,7 @@
         <p class="ui text inverted">前去下载 Wonderful Luogu：</p>
         <a class="ui button inverted teal" target="_blank" href="https://userstyles.world/style/10506/wonderful-luogu"><i class="download icon"></i> <code>userstyles.world</code></a>
         <p class="ui text inverted">也可前往 GitHub 下载（大陆访问慢）：</p>
-        <a class="ui button inverted teal" target="_blank" href="https://github/hellolllllin/wonluogu/releases"><i class="download icon"></i> <code>Releases</code></a>
+        <a class="ui button inverted teal" target="_blank" href="https://github.com/hellolllllin/wonluogu/releases"><i class="download icon"></i> <code>Releases</code></a>
         <!-- 
         <div class="ui info floating message inverted">
             <div class="header">注意！</div>
